Fix: IndoPak font overlap

--- a/src/components/dls/QuranWord/TextWord.module.scss
+++ b/src/components/dls/QuranWord/TextWord.module.scss
@@ -9,3 +9,8 @@
 .IndoPak {
   font-family: IndoPak !important; // important is needed to over-ride the language specific font-family
 }
+
+.hasIndoPakStopSign {
+  display: inline-block;
+  padding-inline-end: 0.25em; // Indopak stop sign overlap with the next word, so we add some padding
+}
